Added regression test + comments.